# mcp-financial-server

./: .env.example  .gitignore  README.md  pyproject.toml
database/: schema.sql  seed.sql  seed_script.py
src/: server.py
src/config/: env.py
src/db/: client.py  queries.py
src/middleware/: rate_limiter.py
src/utils/: errors.py  formatters.py
src/validators/: input_validator.py
tests/: test_tools.py
